--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   --primary-dark: #272621;
-  --primary-mid: #4E4D4A;
+  --primary-light: #4E4D4A;
 
   --utility: #BFBFBF;
 
