--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,9 @@
   --secondary-mid: #CBB155;
   --secondary-light: #D3C491;
 
-  --green: #4a6d3e;
-  --yellow: #af9d5b;
-  --red: #783a3a;
+  --green: #3d5634;
+  --yellow: #9a884a;
+  --red: #703030;
   --blue: #384e75;
 
   color: rgba(255, 255, 255, 0.87);
