zklogin and market ui

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   --primary-dark: #272621;
+  --primary-mid: #34322B;
   --primary-light: #4D4A40;
 
   --utility: #BFBFBF;
