--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,31 @@
 .itemson {
     filter: brightness(1);
 }
+
+.slider {
+    -webkit-appearance: none;
+    width: 80%;
+    height: 5px;
+    border-radius: 5px;
+    background: var(--primary-dark);
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 8px;
+    height: 20px;
+    background: var(--primary-light);
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 8px;
+    height: 20px;
+    background: #04AA6D;
+    cursor: pointer;
+}
